--- a/styles/LeftPanel.module.css
+++ b/styles/LeftPanel.module.css
@@ -4,6 +4,11 @@
     color: #ccc;
 
 }
+.textfield {
+    color: #ccc;
+    /* background-color: #999; */
+    /* font-size: 5rem; */
+}
 .stat {
     height: 5rem;
     display: grid;
